ci: use v4.0.1 of codecov/codecov-action

--- a/.github/workflows/lint-and-check.yaml
+++ b/.github/workflows/lint-and-check.yaml
@@ -15,7 +15,6 @@ on:
 
 env:
   MODULES: docker_tag_updater
-  CODECOV_UPLOAD: ${{ vars.CODECOV_UPLOAD }}
 
 jobs:
   lint-and-check:
@@ -46,5 +45,10 @@ jobs:
         if: always()
         run: poetry run pytest --cov --cov-report=xml
       - name: Upload to Codecov
-        if: ${{ env.CODECOV_UPLOAD == 'true' }}
-        uses: codecov/codecov-action@v3
+        if: ${{ env.CODECOV_TOKEN }}
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+        uses: codecov/codecov-action@v4.0.1
+        with:
+          token: ${{ env.CODECOV_TOKEN }}
+          slug: ${{ github.repository }}
