--- a/.github/workflows/docker-imager.yaml
+++ b/.github/workflows/docker-imager.yaml
@@ -8,7 +8,8 @@ on:
   workflow_dispatch:
 
 env:
-  PACKAGE: docker-tag-updater
+  PACKAGE: ${{ vars.PACKAGE || github.event.repository.name }}
+  ACTOR: ${{ vars.ORGANISATION || github.actor }}
 
 jobs:
   build-and-push:
@@ -16,7 +17,6 @@ jobs:
     permissions:
       contents: read
       packages: write
-    container: catthehacker/ubuntu:act-latest
     steps:
       - name: Check if Registry details are available
         env:
@@ -26,55 +26,48 @@ jobs:
 
       - name: Checkout
         uses: actions/checkout@v2
-
-      - name: Get current tag
-        id: get-current-tag
-        uses: zingimmick/github-action-get-current-tag@v1
+        with:
+          fetch-depth: 0
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v3
+
+      - name: Docker metadata
+        id: meta
+        uses: docker/metadata-action@v5
+        env:
+          FORGE_REGISTRY_URL: ${{ secrets.FORGE_REGISTRY_URL }}
+        with:
+          images: |
+            name=${{ env.FORGE_REGISTRY_URL }}/${{ env.ACTOR }}/${{ env.PACKAGE }}
+          tags: |
+            type=semver,pattern=v{{version}}
+            type=semver,pattern=v{{major}}
+            type=semver,pattern=v{{major}}.{{minor}}
+            type=semver,pattern=v{{major}}.{{minor}}.{{patch}}
+            type=sha
+          labels: |
+            org.opencontainers.image.authors=${{ vars.MY_NAME || env.ACTOR }} <${{ vars.MY_EMAIL }}>
+          annotations: |
+            org.opencontainers.image.authors=${{ vars.MY_NAME || env.ACTOR }} <${{ vars.MY_EMAIL }}>
 
       - name: Login to Forge registry
-        uses: docker/login-action@v1
+        uses: docker/login-action@v3
         env:
           FORGE_REGISTRY_URL: ${{ secrets.FORGE_REGISTRY_URL }}
         if: ${{ env.FORGE_REGISTRY_URL }}
         id: login-forge
         with:
-          registry: ${{ secrets.FORGE_REGISTRY_URL }}
+          registry: ${{ env.FORGE_REGISTRY_URL }}
           username: ${{ github.actor }}
           password: ${{ secrets.FORGE_REGISTRY_PAT || secrets.GITHUB_TOKEN }}
 
       - name: Build and push to Forge
         uses: docker/build-push-action@v2
-        env:
-          FORGE_REGISTRY_URL: ${{ secrets.FORGE_REGISTRY_URL }}
         with:
           context: .
           builder: ${{ steps.buildx.outputs.name }}
           push: true
-          tags: |
-            ${{ env.FORGE_REGISTRY_URL }}/${{ github.actor }}/${{ env.PACKAGE }}:latest
-            ${{ env.FORGE_REGISTRY_URL }}/${{ github.actor }}/${{ env.PACKAGE }}:${{ steps.get-current-tag.outputs.tag }}
-
-      - name: Login to private registry
-        uses: docker/login-action@v1
-        id: login-private
-        env:
-          PRIVATE_REGISTRY_URL: ${{ secrets.PRIVATE_REGISTRY_URL }}
-        if: ${{ env.PRIVATE_REGISTRY_URL }}
-        with:
-          registry: ${{ secrets.PRIVATE_REGISTRY_URL }}
-          username: ${{ secrets.PRIVATE_REGISTRY_USERNAME }}
-          password: ${{ secrets.PRIVATE_REGISTRY_PASSWORD }}
-
-      - name: Push to private registry
-        env:
-          PRIVATE_REGISTRY_URL: ${{ secrets.PRIVATE_REGISTRY_URL }}
-          PRIVATE_REGISTRY_USERNAME: ${{ secrets.PRIVATE_REGISTRY_USERNAME }}
-        if: ${{ env.PRIVATE_REGISTRY_URL && success() }}
-        run: >
-          docker buildx imagetools create
-          -- tag ${{ env.PRIVATE_REGISTRY_URL }}/${{ env.PRIVATE_REGISTRY_USERNAME }}/${{ env.PACKAGE }}:latest
-          -- tag ${{ env.PRIVATE_REGISTRY_URL }}/${{ env.PRIVATE_REGISTRY_USERNAME }}/${{ env.PACKAGE }}:${{ steps.get-current-tag.outputs.tag }}
-          ${{ secrets.FORGE_REGISTRY_URL }}/${{ github.actor }}/${{ env.PACKAGE }}:${{ steps.get-current-tag.outputs.tag }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          annotations: ${{ steps.meta.outputs.annotations }}
